fix context menu button z-index

--- a/web/static/css/application.sass
+++ b/web/static/css/application.sass
@@ -160,7 +160,6 @@ body
       font-size: 18px
       font-family: "PT Sans","PT Sans Fallback",Tahoma,Verdana,sans-serif
   .menu
-    z-index: 1
     margin-right: 1px
     padding-top: auto
     padding-bottom: auto
